# otus_lab_9_range

./: .gitignore  .travis.yml  CMakeLists.txt
src/: CMakeLists.txt  ip_worker.h  my_algorithm.h  range_main.cpp
tests/: CMakeLists.txt  test.cpp
